src/objects/FieloCMS__Component__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMSPRP_CustomDetailParameter__c</fullName>
        <label>Custom Detail Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMSPRP_HasDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMSPRP_MainSourceComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Source Component</label>
        <referenceTo>FieloCMS__Component__c</referenceTo>
        <relationshipLabel>Components (Main Source Component)</relationshipLabel>
        <relationshipName>FieloCMSPRP_MainComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMSPRP_ProductSourceComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Source Component</label>
        <referenceTo>FieloCMS__Component__c</referenceTo>
        <relationshipLabel>Components (Product Source Component)</relationshipLabel>
        <relationshipName>FieloCMSPRP_ProductComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMSPRP_SecondarySourceComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Source Component</label>
        <referenceTo>FieloCMS__Component__c</referenceTo>
        <relationshipLabel>Components (Secondary Source Component)</relationshipLabel>
        <relationshipName>FieloCMSPRP_SecondaryComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMSPRP_SubmitMode__c</fullName>
        <label>Submit Mode</label>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
</CustomObject>